--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.19",
+    "react-mapbox-gl-geocoder": "^1.1.0",
     "react-responsive-modal": "^6.2.0"
   },
   "devDependencies": {
