--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.19",
     "react-mapbox-gl-geocoder": "^1.1.0",
-    "react-responsive-modal": "^6.2.0"
+    "react-responsive-modal": "^6.2.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-slick": "^0.23.8",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
